--- a/TaxiFinder/Properties/Resources.resx
+++ b/TaxiFinder/Properties/Resources.resx
@@ -117,4 +117,7 @@
   <data name="TaxiFinder_SearchButton_HelpRequested_Click_on_label_to_start_searching_with_one_of_three_possible_search_engines" xml:space="preserve">
     <value>Click on label to start searching with one of three possible search engines</value>
   </data>
+  <data name="Searcher_ExecuteSearch_Error_occurred_while_reading_an_input_XML_file_Try_to_reload_data_XML_files_" xml:space="preserve">
+    <value>Error occurred while reading an input XML file.Try to reload data XML files.</value>
+  </data>
 </root>
